# tenki

./: Cargo.toml  LICENSE
sample_notes/: keyboard_shortcuts.md  markdown_syntax.md  welcome.md  wikilinks.md
tenki-core/: Cargo.toml
tenki-core/src/: error.rs  graph.rs  lib.rs  parser.rs  scanner.rs
tenki-tui/: Cargo.toml
tenki-tui/src/: app.rs  editor.rs  main.rs  ui.rs
