[workspace]
resolver = "2"
members = ["tenki-core", "tenki-tui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["honyo"]
license = "MIT"
repository = "https://github.com/honyo/tenki"

[workspace.dependencies]
# Core dependencies
pulldown-cmark = "0.12"
petgraph = "0.6"

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.43", features = ["full"] }

# Shared utilities
thiserror = "2.0"
anyhow = "1.0"
regex = "1.11"
walkdir = "2.5"
